--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -120,7 +120,7 @@
                 <h2 class="sectionTitle">Contacts</h2>
 
                 <section class="d-flex flex-row">
-                    <div style="margin: 1% 5%;">
+                    <div class="twitterline" style="margin: 1% 5%;">
                         <a class="twitter-timeline" data-width="600" data-height="400" data-theme="dark" href="https://twitter.com/AlexBuaiscia?ref_src=twsrc%5Etfw">Tweets by AlexBuaiscia</a>
                     </div>
                     <div style="margin: 1% 5%; font-size: 26px;  ">
@@ -140,8 +140,8 @@
                         </p>
 
                     </div>
-                    <div>
-                        <form style="border:1px solid #000000;padding:3px;text-align:center;" action="https://tinyletter.com/buaiscia" method="post"
+                    <div class="formdiv">
+                        <form class="formclass" action="https://tinyletter.com/buaiscia" method="post"
                             target="popupwindow" onsubmit="window.open('https://tinyletter.com/buaiscia', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true">
                             <p style="margin: 1% 5%; font-size: 22px;">
                                 <label for="tlemail">Subscribe to my newsletter: enter your email</label>
