--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-    <div id="projects" class="row; padding-bottom: 10px;">
+    <div class="row; padding-bottom: 10px;">
         <div class="col-md-12">
             <h2 class="portfolioTitle">Portfolio</h2>
             <section id="projects" style="margin: 2% 0;" class="projects">
