--- a/views/dev/portfolio/website.ejs
+++ b/views/dev/portfolio/website.ejs
@@ -6,11 +6,10 @@
     <p class="descPortfolio">
         Created in 2018 and constantly updated, the website is a partial show of my work working with vanillaJS with the support of nodeJS and NPM.
         Using the EJS engine to integrate JS in HTML, it includes both a frontend and a backend. 
-        The site is static, however it includes a blog section based on mongoDB (which manages the users and auth as well).
+        The site is static, however it includes a backend in the blog section with data stored on mongoDB (which manages the users and auth as well).
     </p>
     <div style="text-align: center">
         <img class="gif" src="../img/alexbuaisciasite_opt.gif"></img>
-
     </div>
 
 <% include ../../partials/footer %>
