--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -57,7 +57,7 @@
                     <div class="col-md-4">
                         <a href="/devlife">
                             <div class="card mb-3 entry">
-                                <img class="card-img-top" src="https://steemitimages.com/DQmNW1WwVdQtYZzdndvrgRiYgiNLJmh2RU2wBshmHbiPvJj/photo5012998412878063555.jpg" alt="JS screenshot">
+                                <img class="card-img-top" src="img/dev_lap.jpg" alt="JS screenshot">
                                 <div class="card-info">
                                     <h2>Dev life</h2>
                                 </div>
