fixed layout on ipad

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -577,6 +577,12 @@ a:active {
 }
 
 
+.skillset {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+
 
 /* PORTABLE DEVICES */
 
