--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,7 @@
         <div class="container-fluid px-2 navStyle">
 
             <nav class="navbar navbar-expand-xl navbar-light" role="navigation">
-                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="#">Alex Buaiscia</a>
+                    <a style="font-family: 'Dancing Script', cursive; font-size: 40px;" class="navbar-brand" href="/">Alex Buaiscia</a>
 
                 <div class="navbar-header">
 
