add respons img for devices + fixed style on desktop + fixed margins

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -572,8 +572,13 @@ a:active {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
 }
+
 .respImg {
-    display: none;
+    display: none!important;
+}
+
+.formdiv {
+    margin-right: 3rem;
 }
 
 
