--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -21,7 +21,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <img style="max-height: 714px" class="respImg d-block w-100" src="../img/desk.jpg" alt="Second slide">
+                <img style="max-height: 714px" class="respImg d-block w-100" src="../img/dev_img.jpg" alt="Second slide">
                 <div id="carouselExampleIndicators" class="carousel slide slider" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
