--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -619,7 +619,7 @@ a:active {
         grid-template-columns: repeat(2, 1fr);
     }
     .respImg {
-        display: block;
+        display: block!important;
     }
 }
 
@@ -655,7 +655,7 @@ a:active {
         column-count: 1;
     }
     .respImg {
-        display: block;
+        display: block!important;
     }
 }
 
