--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -59,6 +59,7 @@ h2 {
 
 }
 
+
 main {
     min-height: 100vh; /* will cover the 100% of viewport */
  overflow: hidden;
@@ -66,6 +67,8 @@ main {
  position: relative;
  padding-bottom: 3em; /* height of your footer */
 }
+
+
 
 /* HEADER */
 
@@ -444,8 +447,9 @@ a:active {
     -webkit-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
     -moz-box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
     box-shadow: 10px 11px 10px 6px rgba(0, 0, 0, 0.24);
-    transition: .2s linear;
+    transition: .2s ease-out;
     z-index: 10;
+    background-color: snow
 }
 
 .entry img {
@@ -455,7 +459,7 @@ a:active {
 
 .card-info {
     position: absolute;
-    top: 80%;
+    top: 75%;
     /* bottom: 50%; */
     left: 0;
     right: 0;
@@ -463,7 +467,7 @@ a:active {
     color: rgb(189, 172, 172); */
     visibility: hidden;
     opacity: 0;
-    transition: opacity 1s;
+    transition: opacity 1.5s;
     z-index: 5;
 }
 
@@ -477,6 +481,12 @@ a:active {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding: 0 0 100px 0;
+}
+
+
+.card-info > h2 {
+    font-family: 'Dancing Script', serif;
+    font-size: 3em;
 }
 
 #landingtitle {
