--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -32,15 +32,15 @@
                             <img class="d-block w-100" src="../img/road.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <a href="#skills">
-                                    <button type="button" class="btn btn-default btnSlide">Are those the skills you need?</button>
+                                    <button type="button" class="btn btn-default btnSlide1">Are those the skills you need?</button>
                                 </a>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="max-height: 714px" class="d-block w-100" src="../img/desk.jpg" alt="Second slide">
+                            <img  class="d-block w-100" src="../img/desk.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block btnSlide">
                                 <a href="/devblog">
-                                    <button type="button" class="btn btn-default btnSlide">Sharing some knowledge
+                                    <button type="button" class="btn btn-default btnSlide2">Sharing some knowledge
                                     </button>
                                 </a>
                             </div>
