--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <% include ./partials/header %>
 
-    <div style="margin-top: 100px;">
-        <h1 style="text-align:center">Login</h1>
-        <div style="width:30%; margin: 80px auto;">
+    <!-- <div>
+        <h2>Login</h2>
+        <div class="signform">
             <form action="/login" method="POST">
                 <div class="form-group">
                     <input type="text" name="username" placeholder="username">
@@ -16,6 +16,28 @@
             </form>
             <a href="javascript:history.back()">Go Back</a>
         </div>
+    </div> -->
+
+
+    <div>
+        <h2>Login</h2>
+        <div class="signform">
+            <form action="/login" method="POST">
+                <div class="input_container">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="username"  id="field_email" class='input_field' placeholder="username">
+                </div>
+                <div class="input_container">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="password" id="field_password" class='input_field' placeholder="password">
+                </div>
+                <div class="sub">
+                    <input type="submit" id='input_submit' class="input_field" value="Login">
+                    <a href="javascript:history.back()"><button  id='backbtn' class="input_field">Go Back</button></a>
+                </div>
+            </form>
+        </div>
+        
     </div>
 
 
