--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -14,7 +14,7 @@
                     </p>
                 </div>
                 <div style="margin: auto; text-align: center">
-                    <a href="./portfolio/deploymentTool"></a><img src="../img/deployment_tool.jpg" alt="developed deployment tool"></a>
+                    <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool.jpg" alt="developed deployment tool"></a>
                     <br>
                     <p id="caption">Work related deployment tool. Functions: upload files on an automation server;
                         <br>Loading the wanted file on one application server and running shell scripts
@@ -24,7 +24,7 @@
                     </p>
                 </div>
                 <div style="margin: auto; text-align: center">
-                    <a href="./portfolio/portal"></a><img src="../img/portal.png" alt="portal tool"></a>
+                    <a href="./portfolio/portal"><img src="../img/portal.png" alt="portal tool"></a>
                     <br>
                     <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
                         
