--- a/views/dev/portfolio/website.ejs
+++ b/views/dev/portfolio/website.ejs
@@ -4,12 +4,48 @@
         Personal website
     </h2>
     <p class="descPortfolio">
-        Created in 2018 and constantly updated, the website is a partial show of my work working with vanillaJS with the support of nodeJS and NPM.
-        Using the EJS engine to integrate JS in HTML, it includes both a frontend and a backend. 
-        The site is static, however it includes a backend in the blog section with data stored on mongoDB (which manages the users and auth as well).
+        Created in 2018 and constantly updated, the website is a partial show of my work working with vanillaJS with the support
+        of NodeJS and NPM. Using the EJS engine to integrate JS in HTML, it includes both a frontend and a backend. 
+        <br/> 
+        <br/> 
+        The site is static, however it is built with a backbone of NodeJS (with Express) for routing, auth, connection to DB, modelling, security; in the blog section the data is stored on mongoDB (which manages the users
+        and auth as well).
     </p>
     <div style="text-align: center">
         <img class="gif" src="../img/alexbuaisciasite_opt.gif"></img>
     </div>
 
-<% include ../../partials/footer %>
+    <h3>Skill set</h3>
+    <section class='skillsetport'>
+        <div>
+            <p>Frontend</p>
+            <p>HTML5 - CSS3 - JS - EJS</p>
+            <p>
+                <img src="../img/if_html5_294678.svg" alt="HTML5">
+                <img src="../img/if_css3_294692.svg" alt="CSS3">
+                <img src="../img/JS.png" alt="JS">
+                <img src="../img/ejs.jpg" alt="EJS">
+                
+            </p>
+        </div>
+        <div>
+            <p>Backend</p>
+            <p>NodeJS - Express - NPM</p>
+            <p>
+                <img src="../img/nodejs.png" alt="NodeJS">
+                <img class="resizedImgPort" src="../img/express.png" alt="NodeJS">
+                <img class="resizedImgPort" src="../img/npm.png" alt="NPM">
+            </p>
+        </div>
+        <div>
+            <p>Storage</p>
+            <p>MongoDB</p>
+            <p>
+                <img src="../img/if_mongodb_1012822.svg" alt="MongoDB">
+            </p>
+        </div>
+
+    </section>
+
+
+    <% include ../../partials/footer %>
