made and styled portal tool page for portfolio

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -590,13 +590,16 @@ a:active {
 .skillsetport img {
     max-height: 50px;
     margin:  20px auto;
-}
-
-.resizedImgPort {
     max-width: 80px; 
     height: auto; 
     padding-left: 5%;
 }
+
+/* .resizedImgPort {
+    max-width: 80px; 
+    height: auto; 
+    padding-left: 5%;
+} */
 
 
 /* FOOTER */
