--- a/views/dev/portfolio.ejs
+++ b/views/dev/portfolio.ejs
@@ -16,7 +16,7 @@
                 <div style="margin: auto; text-align: center">
                     <a href="./portfolio/deploymentTool"><img src="../img/deployment_tool.jpg" alt="developed deployment tool"></a>
                     <br>
-                    <p id="caption">Work related deployment tool. Functions: upload files on an automation server;
+                    <p id="caption">Automatic deployment tool. Functions: upload files on an automation server;
                         <br>Loading the wanted file on one application server and running shell scripts
                         <br>to deploy and sync all the servers with the given parameters.
                         <br>
@@ -29,7 +29,7 @@
                     <p id="caption">Work related tool. Functions: Aggregate on one portal page all tools used by the team
                         
                         <br>
-                        <span style="font-weight: 600">Technologies used: React, Gatsby, HTML5/CSS3</span>
+                        <span style="font-weight: 600">Technologies used: ReactJS, Gatsby, HTML5/CSS3</span>
                     </p>
                 </div>
 
