--- a/views/dev/portfolio/deploymentTool.ejs
+++ b/views/dev/portfolio/deploymentTool.ejs
@@ -45,7 +45,7 @@
                 <img src="../img/nodejs.png" alt="NodeJS">
                 <img class="resizedImgPort" src="../img/express.png" alt="NodeJS">
                 <img class="resizedImgPort" src="../img/npm.png" alt="NPM">
-                <img class="resizedImgPort" src="../img/apache.jfif" alt="Apache">
+                <img src="../img/apache.jfif" alt="Apache">
             </p>
         </div>
         <div>
