--- a/views/dev/portfolio/website.ejs
+++ b/views/dev/portfolio/website.ejs
@@ -33,15 +33,15 @@
             <p>NodeJS - Express - NPM</p>
             <p>
                 <img src="../img/nodejs.png" alt="NodeJS">
-                <img class="resizedImgPort" src="../img/express.png" alt="NodeJS">
-                <img class="resizedImgPort" src="../img/npm.png" alt="NPM">
+                <img src="../img/express.png" alt="NodeJS">
+                <img src="../img/npm.png" alt="NPM">
             </p>
         </div>
         <div>
             <p>Storage</p>
             <p>MongoDB</p>
             <p>
-                <img src="../img/if_mongodb_1012822.svg" alt="MongoDB">
+                <img  style="max-width: none;" src="../img/if_mongodb_1012822.svg" alt="MongoDB">
             </p>
         </div>
 
