fixed icon on register page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,7 +35,7 @@
                     <input type="password" name="password" id="field_password" class='input_field' placeholder="password">
                 </div>
                 <div class="input_container">
-                    <i class="fas fa-lock"></i>
+                    <i class="fas fa-envelope"></i>
                     <input type="text" name="email" id="field_email" class='input_field' placeholder="email (not manadatory)">
                 </div>
                 <div class="sub">
