--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -64,9 +64,10 @@
                 <h2 id="about" class="sectionTitle">
                     About me
                 </h2>
-                <p style="text-align: center; font-size: 24px; margin: 2% 0;">
+                <p class="aboutMain">
                     I'm an IT Application Specialist based in Brno, Czech Republic, who is building full-stack websites and applications. I love
                     to learn technologies and to build new projects. </p>
+                    <br/>
                 <div style="text-align:center">
                     <a class="btn btn-info" target="_blank" href="../docs/Alex_Buaiscia_CV.pdf">Download my CV</a>
                 </div>
