--- a/views/dev/portfolio/deploymentTool.ejs
+++ b/views/dev/portfolio/deploymentTool.ejs
@@ -5,7 +5,7 @@
     </h2>
     <p class="descPortfolio">
         Created in 2018, this application is setup on the needs from my job to do an automatic deployment. Its functionalities:</p>
-    <ol style="margin: 0 7rem;">
+    <ol class='toollist'>
         <li>Upload the application package to install from a third party;</li>
         <li>Deploy it on the first server of the cluster: </li>
         <ol>
@@ -18,7 +18,7 @@
         <li>Call a bash script with given FE parameters to sync all the cluster and restart the needed services</li>
     </ol>
     <br/>
-    <p style="margin: 0 7rem;">The application relies on EJS for frontend and NodeJS / Express for backend. It is deployed on some automation server
+    <p class="descPortfolio">The application relies on EJS for frontend and NodeJS / Express for backend. It is deployed on some automation server
         and talk to the application server through ssh.
     </p>
     <div style="text-align: center">
