fixed display inline issue with width to display block

--- a/views/dev/devlife.ejs
+++ b/views/dev/devlife.ejs
@@ -155,7 +155,7 @@
                                 <input type="text" style="width:140px" name="email" id="tlemail" />
                             </p>
                             <input type="hidden" value="1" name="embed" />
-                            <input style="width: 40%; margin: auto; display: inline;" class="input_container" id="input_submit" type="submit" value="Subscribe"
+                            <input style="width: 40%; margin: auto; display: block;" class="input_container" id="input_submit" type="submit" value="Subscribe"
                             />
                             <p style="font-size:0.8rem; padding-top: 15px;">
                                 <a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a>
